# helpdesk-agent

./: .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
app/: config.py  main.py  slack_handler.py
app/agents/: graph.py
app/db/: init_db.py  models.py  session.py
app/tools/: embedder.py  hr_lookup.py  jira.py  rag.py  slack_reply.py
data/: knowledge_base.json
scripts/: ingest.py
tests/: test_agent.py  test_tools.py
